--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -171,6 +171,37 @@ button:hover {
     display: inline-flex;
 }
 
+.selectYear {
+    display: flex;
+    padding: 20px;
+    width: 500px;
+    height: 300px;
+    flex-direction: column;
+    background-color: #2f2841;
+    border-radius: 7px;
+    justify-content: center;
+}
+
+.selectYear label {
+    color: white;
+    margin: 20px;
+}
+
+.selectYear select {
+    padding: 10px;
+    border-radius: 7px;
+}
+
+.btn {
+    width: 100px;
+    height: 50px;
+    border-radius: 15px;
+    align-self: center;
+    margin: 10px;
+    border: 1px solid;
+    padding: 10px;
+}
+
 @media (min-width: 900px) { 
     .main_content {
         height: 81vh;
